[package]
name = "atlas-divisible-state"
version = "0.1.0"
edition = "2021"
description = "Persistent KV Store state manager for Atlas"
authors = ["Amadeu Marques"]
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
anyhow = "1.0.75"
thiserror = "1.0.50"
libc = "*"
atlas-core={path = "../Atlas-Core" }
atlas-common = {path = "../Atlas-Common" }
atlas-communication = {path = "../Atlas-Communication" }
atlas-smr-execution = {path = "../Atlas-SMR-Execution" }
atlas-smr-application = {path = "../Atlas-SMR-Application" }
atlas-metrics = {path = "../Atlas-Metrics" }
serde = { version = "*", optional = false }
blake3 = { version = "*", optional = false }
bincode = { version = "2.0.1", optional = false }
sled = { version = "0.34.7"}
scoped_threadpool = "0.1.9"
